--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rimraf dist && npx tsc -p tsconfig-build.json"
+    "build": "rimraf dist && npx tsc -p tsconfig-build.json",
+    "lint": "npx eslint .",
+    "lint:fix": "npm run lint -- --fix"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +18,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "eslint": "^8.31.0",
     "module-alias": "^2.2.2",
     "rimraf": "^3.0.2"
   }
