--- a/package.json
+++ b/package.json
@@ -6,15 +6,21 @@
   "scripts": {
     "build": "rimraf dist && npx tsc -p tsconfig-build.json",
     "lint": "npx eslint .",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "npm run lint -- --fix",
+    "test": "jest --passWithNoTests --no-cache --runInBand",
+    "test:watch": "npm run test -- --watch",
+    "test:coverage": "npm run test -- --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.2.5",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^18.11.18",
     "eslint-config-standard-with-typescript": "^26.0.0",
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.9.4"
   },
   "dependencies": {
