--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint:fix": "npm run lint -- --fix",
     "test": "jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "npm run test -- --watch",
+    "test:staged": "npm run test -- --findRelatedTests",
     "test:coverage": "npm run test -- --coverage"
   },
   "keywords": [],
@@ -20,6 +21,7 @@
     "@types/node": "^18.11.18",
     "eslint-config-standard-with-typescript": "^26.0.0",
     "jest": "^29.3.1",
+    "lint-staged": "^13.1.0",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.4"
   },
