--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "npm run test -- --watch",
     "test:staged": "npm run test -- --findRelatedTests",
-    "test:coverage": "npm run test -- --coverage"
+    "test:coverage": "npm run test -- --coverage",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
     "@types/module-alias": "^2.0.1",
     "@types/node": "^18.11.18",
     "eslint-config-standard-with-typescript": "^26.0.0",
+    "husky": "^8.0.3",
     "jest": "^29.3.1",
     "lint-staged": "^13.1.0",
     "ts-jest": "^29.0.3",
